force-app/main/default/objects/FN_Project__c/fields/Buffer__c.field-meta.xml
<CustomField>
    <fullName>Buffer__c</fullName>
    <inlineHelpText>The 50/90 size buffer</inlineHelpText>
    <label>Buffer</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>