force-app/main/default/objects/FN_Project__c/fields/FeatureOrder__c.field-meta.xml
<CustomField>
    <fullName>FeatureOrder__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The field used to order the items</description>
    <inlineHelpText>The a numeric value used to order the features.</inlineHelpText>
    <label>Feature Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>