force-app/main/default/objects/FN_Project__c/fields/ProjectedDuration__c.field-meta.xml
<CustomField>
    <fullName>ProjectedDuration__c</fullName>
    <description>The projected amount of time in work rate units to complete the necessary work for this project</description>
    <label>Projected Duration</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>