force-app/main/default/objects/FN_Project__c/fields/ProjectedTime__c.field-meta.xml
<CustomField>
    <fullName>ProjectedTime__c</fullName>
    <description>The total size of the project based on the project item records</description>
    <label>Projected Time</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>