force-app/main/default/objects/FN_Project__c/fields/ProjectedTimeWithBuffer__c.field-meta.xml
<CustomField>
    <fullName>ProjectedTimeWithBuffer__c</fullName>
    <description>the projected amount of time with the buffer to complete the work for this project</description>
    <inlineHelpText>The projected time to complete the work.</inlineHelpText>
    <label>Projected Time w/Buffer</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>