force-app/main/default/objects/FN_Project__c/fields/RateOfWork__c.field-meta.xml
<CustomField>
    <fullName>RateOfWork__c</fullName>
    <description>the rate at which work is completed.  could be by points per some time block or number of stories.</description>
    <inlineHelpText>The rate at which the work is completed.  Could be a sprint velocity or points per some other time period.  Could also be the number of stories worked in a given time period.</inlineHelpText>
    <label>Rate of Work</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>