force-app/main/default/objects/FN_Project__c/recordTypes/ProjectFeature.recordType-meta.xml
<RecordType>
    <fullName>ProjectFeature</fullName>
    <active>true</active>
    <description>A group of project items that make up a feature</description>
    <label>Feature</label>
</RecordType>