force-app/main/default/objects/FN_Project__c/recordTypes/ProjectSheet.recordType-meta.xml
<RecordType>
    <fullName>ProjectSheet</fullName>
    <active>true</active>
    <description>A new project sheet that contains project line items optionally grouped by feature</description>
    <label>Sheet</label>
</RecordType>