force-app/main/default/objects/FN_Project__c/listViews/default.listView-meta.xml
<ListView>
    <fullName>default</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>ProjectSheet__c</columns>
    <columns>RateOfWork__c</columns>
    <columns>ProjectedTime__c</columns>
    <columns>ProjectedTimeWithBuffer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Team__c</columns>
    <filterScope>Mine</filterScope>
    <label>_default</label>
</ListView>